--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="text_login">Login</string>
     <string name="text_username_hint">Enter an username</string>
     <string name="text_password_hint">Password</string>
+    <string name="text_refresh">Refresh</string>
 </resources>
